# MentorPRO_backend

./: .dockerignore  .env  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  requirements.txt  run.py  test_db.py  trust.json
app/: asgi.py  main.py
app/api/v1/: router.py
app/core/: config.py  dependencies.py  security.py
app/crud/: crud_asaas_config.py
app/db/: base.py  session.py
app/gateways/asaas/: client.py
app/integrations/: asaas_client.py
app/modules/admin/: models.py  router.py  schemas.py
app/modules/asaas/: models.py  router.py  schemas.py
app/modules/atividades/: models.py  router.py  schemas.py
app/modules/auth/: router.py  schemas.py
app/modules/concursos/: models.py  router.py  schemas.py
app/modules/crm/: models.py  router.py  schemas.py
app/modules/equipe/: models.py  router.py  schemas.py
app/modules/finance/: models.py  router.py  schemas.py
app/modules/financeiro/: models.py  router.py  schemas.py
app/modules/metrics/: router.py
app/modules/products/: crud.py  models.py  router.py  schemas.py
app/modules/public/: router.py  schemas.py
app/modules/students/: crud.py  models.py  router.py  schemas.py
app/modules/tenants/: models.py  router.py  schemas.py
app/modules/users/: models.py  router.py  schemas.py
app/modules/webhooks/: router.py
app/services/: asaas_reconcile.py
app/utils/: br.py
data/: mentorpro.db
mentorpro_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: create_superadmin.py  run_dev.sh
