[project]
name = "mentorpro-backend"
version = "0.1.0"
description = "MentorPro backend (financeiro) - FastAPI + SQLAlchemy async"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "SQLAlchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[tool.uvicorn]
factory = false
reload = true
host = "0.0.0.0"
port = 8000